--- a/frontend/src/components/PersonalPage/Client/PersonalPage.module.scss
+++ b/frontend/src/components/PersonalPage/Client/PersonalPage.module.scss
@@ -1,4 +1,4 @@
-@import '../../shared/style';
+@import '../../../shared/style';
 
 .user {
   display: flex;
@@ -18,7 +18,6 @@
       height: 100%;
     }
   }
-
 
   .info {
     margin-left: 20px;
