--- a/frontend/src/shared/style.scss
+++ b/frontend/src/shared/style.scss
@@ -9,6 +9,8 @@ $main-blue-40: rgba(161, 165, 170, 0.4);
 $main-green: rgba(27, 194, 3, 0.96);
 $green-100: rgba(109, 170, 143, 0.96);
 
+$red: #ea0505;
+
 :export {
   $main-blue: $main-blue;
   gray-100: $gray-100;
@@ -17,4 +19,5 @@ $green-100: rgba(109, 170, 143, 0.96);
   main-blue-40: $main-blue-40;
   main-green:$main-green;
   green-100: $green-100;
+  red: $red
 }
