--- a/frontend/src/components/Create/Create.module.scss
+++ b/frontend/src/components/Create/Create.module.scss
@@ -19,19 +19,6 @@
   }
 }
 
-.field {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-auto-rows: minmax(30px, auto);
-  margin-bottom: 20px;
-  column-gap: 50px;
-
-  .titleField {
-    color: $gray-100;
-    font-weight: 400;
-  }
-}
-
 .titleBox {
   margin: 20px 0;
 }
@@ -52,4 +39,13 @@
 .desc {
   margin: 20px 0;
   width: 100%;
+}
+
+.buttonSumbit {
+  float: right;
+  background: $main-green
+}
+
+.isRequiered{
+  color: $red;
 }
