--- a/frontend/src/components/PersonalPage/Creator/PersonalPage.module.scss
+++ b/frontend/src/components/PersonalPage/Creator/PersonalPage.module.scss
@@ -3,7 +3,6 @@
 .content {
   display: flex;
   flex-direction: row;
-  margin-top: 20px;
   font-size: 14px;
 
   & > * + * {
@@ -15,23 +14,59 @@
   }
 }
 
+
+.noPhoto {
+  font-size: 56px;
+  width: 100%;
+  height: 100%;
+  color: $gray-100;
+}
+
 .userName {
   font-weight: bold;
   font-size: 20px;
   line-height: 24px;
   letter-spacing: .15px;
+  margin-top: 20px;
 
   & > * {
     margin-right: 10px;
   }
 }
+.saveButton{
+  font-size: 16px;
+  color: $main-green;
+}
+
+.loadBlock{
+  width: 250px;
+  height: 250px;
+  position: absolute;
+  display: none;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+  &:hover{
+    background: rgba(0, 0, 0, 0.4);
+  }
+}
 
 .avatar {
+  display: flex;
   margin-top: 20px;
   width: 250px;
   height: 250px;
   overflow: hidden;
   border-radius: 4px;
+
+  &:hover .loadBlock{
+    display: flex;
+  }
 
   img {
     -o-object-fit: cover;
