--- a/frontend/src/main/main.module.scss
+++ b/frontend/src/main/main.module.scss
@@ -4,6 +4,17 @@ body {
   font-family: 'Segoe', 'Segoe UI', Arial, 'sans-serif';
   color: #34373d;
 }
+
+.loader {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
 .wrapper {
   height: 100%;
   position: absolute;
@@ -38,11 +49,12 @@ body {
     color: white;
   }
 
-  .userButton{
+  .userButton {
     text-transform: capitalize;
     color: white;
   }
-  .avatar{
+
+  .avatar {
     margin-left: 10px;
   }
 }
