--- a/frontend/src/main/main.module.scss
+++ b/frontend/src/main/main.module.scss
@@ -1,8 +1,25 @@
+@import '../shared/style';
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Segoe', 'Segoe UI', Arial, 'sans-serif';
   color: #34373d;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: #f9f9fd;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: $gray-100;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+  background-color: #f9f9fd;
 }
 
 .loader {
