--- a/frontend/src/shared/Filter/Filter.module.scss
+++ b/frontend/src/shared/Filter/Filter.module.scss
@@ -1,40 +1,44 @@
 @import '../style';
-  .filter {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
 
-    & > * {
-      margin-bottom: 15px;
-    }
+.select {
+  width: 250px;
+}
+.filter {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
 
-    & > * + * {
-      margin-left: 20px;
-    }
-
-    .titleField {
-      display: block;
-      margin-bottom: 15px;
-    }
-
-    .priceBlock {
-      width: 250px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-
-      .divider {
-        margin: 0 5px;
-      }
-
-      .priceField {
-        width: 100px;
-      }
-    }
+  & > * {
+    margin-bottom: 15px;
   }
 
-.button{
+  & > * + * {
+    margin-left: 20px;
+  }
+
+  .titleField {
+    display: block;
+    margin-bottom: 15px;
+  }
+
+  .priceBlock {
+    width: 250px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    .divider {
+      margin: 0 5px;
+    }
+
+    .priceField {
+      width: 100px;
+    }
+  }
+}
+
+.button {
   margin-top: auto;
   padding: 4px 0;
 }
