--- a/frontend/src/main/main.module.scss
+++ b/frontend/src/main/main.module.scss
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 60px 0;
   font-family: 'Segoe', 'Segoe UI', Arial, 'sans-serif';
   color: #34373d;
 }
