--- a/frontend/src/shared/PromoCard/Card.module.scss
+++ b/frontend/src/shared/PromoCard/Card.module.scss
@@ -1,5 +1,18 @@
 @import '../style';
 
+.root {
+  maxWidth: 345
+}
+
+.media {
+  height: 200px;
+  border: 0;
+}
+
+.content {
+  padding: 15px 10px 10px
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -13,10 +26,10 @@
   }
 
   .videoTitle {
-    margin-top: 10px;
     font-size: 16px;
     font-weight: 700;
-    line-height: 16px;
+    line-height: 20px;
+    height: 40px;
   }
 }
 
