--- a/frontend/src/shared/style.scss
+++ b/frontend/src/shared/style.scss
@@ -3,7 +3,7 @@ $gray-100: #9299a7;
 $gray-100-10: rgba(146, 153, 167, 0.1);
 $gray-100-40: rgba(146, 153, 167, .4);
 
-$main-blue: #1976d2;
+$main-blue: #288ad6;
 $main-blue-40: rgba(25, 118, 210, 0.4);
 
 $main-green: rgba(27, 194, 3, 0.96);
