--- a/frontend/src/shared/style.scss
+++ b/frontend/src/shared/style.scss
@@ -1,3 +1,5 @@
+$gray-main: #2a2b2d;
+
 $gray-100: #9299a7;
 
 $gray-100-10: rgba(146, 153, 167, 0.1);
@@ -19,5 +21,6 @@ $red: #ea0505;
   main-blue-40: $main-blue-40;
   main-green:$main-green;
   green-100: $green-100;
-  red: $red
+  red: $red;
+  gray-main: $gray-main
 }
