--- a/frontend/src/components/Promo/Promo.module.scss
+++ b/frontend/src/components/Promo/Promo.module.scss
@@ -12,10 +12,17 @@
     font-weight: 600;
   }
 
-  .city{
+  .city {
     font-size: 14px;
     color: $gray-100;
     font-weight: 500;
+    margin-top: 4px;
+    display: flex;
+    align-items: center;
+
+    .cityIcon {
+      font-size: 16px;
+    }
   }
 
   .content {
@@ -43,6 +50,7 @@
           display: flex;
           flex-direction: row;
           align-items: center;
+          color: $gray-main;
 
           & > * {
             margin-left: 10px;
@@ -66,6 +74,7 @@
     display: block;
     font-size: 18px;
     font-weight: 600;
+    margin-bottom: 4px;
   }
 
   .descTitle {
@@ -78,7 +87,7 @@
   .more {
     font-size: 16px;
     font-weight: 500;
-    margin: 20px 0;
+    margin-top: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -93,7 +102,7 @@
   }
 
   .desc {
-    margin-top: 40px;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
 
@@ -110,5 +119,17 @@
       margin-bottom: 15px;
       margin-top: 5px;
     }
+  }
+}
+
+.breadcrumbs {
+  margin-top: 10px;
+}
+
+.moreWorks {
+  display: flex;
+  align-items: center;
+  .navNext {
+    font-size: 16px;
   }
 }
