--- a/frontend/src/components/Profile/Profile.module.scss
+++ b/frontend/src/components/Profile/Profile.module.scss
@@ -35,14 +35,16 @@
     flex-direction: column;
     font-size: 14px;
 
-    & > * {
-      display: grid;
-      grid-row-gap: 10px;
-      grid-template-columns: 1fr 3fr;
-      grid-auto-rows: minmax(30px, auto);
-      margin-top: 10px;
+    .infoBlock {
+      margin-top: 20px;
+      & > * {
+        display: grid;
+        grid-row-gap: 10px;
+        grid-template-columns: 1fr 3fr;
+        grid-auto-rows: minmax(30px, auto);
+        margin-top: 10px;
+      }
     }
-
     .titleField {
       text-transform: none;
       width: 180px;
