--- a/frontend/src/components/Create/Create.module.scss
+++ b/frontend/src/components/Create/Create.module.scss
@@ -1,5 +1,25 @@
 @import '../../shared/style';
 
+.div{
+  width: 1000px;
+}
+.stepperContainer {
+  margin: auto 0;
+  margin-right: 10px;
+
+  .step {
+    width: 50px;
+    background-image: linear-gradient(136deg, rgb(242, 113, 33), rgb(233, 64, 87) 70.71%, rgb(138, 35, 135) 100%);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    height: 50px;
+    z-index: 2;
+  }
+}
+
 .title {
   font-size: 20px;
   margin: 20px 0;
@@ -22,7 +42,10 @@
 .titleBox {
   margin: 20px 0;
 }
-
+.time{
+  width:40px;
+  margin-right: 20px;
+}
 .services {
   display: grid;
   grid-template-columns: 1fr 1.5fr;
@@ -46,6 +69,6 @@
   background: $main-green
 }
 
-.isRequiered{
+.isRequiered {
   color: $red;
 }
