--- a/frontend/src/components/PersonalPage/PersonalPage.module.scss
+++ b/frontend/src/components/PersonalPage/PersonalPage.module.scss
@@ -27,6 +27,8 @@
   line-height: 24px;
   letter-spacing: .15px;
   margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
 
   & > * {
     margin-right: 10px;
@@ -34,13 +36,14 @@
 }
 
 .saveButton{
+  right: 0;
   font-size: 16px;
   color: $main-green;
 }
 
 .loadBlock{
-  width: 250px;
-  height: 250px;
+  width: 350px;
+  height: 350px;
   position: absolute;
   display: none;
   font-size: 16px;
@@ -56,11 +59,15 @@
   }
 }
 
+.userBlock{
+  width: 350px;
+}
+
 .avatar {
   display: flex;
-  margin-top: 20px;
-  width: 250px;
-  height: 250px;
+  margin: 20px 0;
+  width: 350px;
+  height: 350px;
   overflow: hidden;
   border-radius: 4px;
 
@@ -109,16 +116,22 @@
   color: $green-100;
 }
 
+.fullBlock{
+  width: 100%;
+}
 .editBlock{
-  width: 700px;
+  max-width: 900px;
+  min-width: 800px;
 }
 .userInfo {
+  max-width: 900px;
+  min-width: 800px;
   display: flex;
   flex-direction: column !important;
 
   & > * {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1.5fr 3fr;
     grid-auto-rows: minmax(30px, auto);
     margin-top: 10px;
   }
