--- a/frontend/src/components/Home/Home.module.scss
+++ b/frontend/src/components/Home/Home.module.scss
@@ -5,11 +5,12 @@ body {
   font-family: 'Segoe', 'Segoe UI', Arial, 'sans-serif';
   color: #34373d;
 }
-.wrapper{
-  height: 100vh;
+
+.wrapper {
   display: flex;
   flex-direction: column;
 }
+
 .headerContainer {
   background: $gray-100-10;;
   min-height: 40vh;
@@ -78,6 +79,7 @@ body {
         text-decoration: underline;
         display: flex;
         align-items: flex-end;
+        cursor: pointer;
 
         .workIcon {
           font-size: 16px;
