--- a/frontend/src/shared/style.scss
+++ b/frontend/src/shared/style.scss
@@ -7,6 +7,7 @@ $gray-100-40: rgba(146, 153, 167, .4);
 
 $main-blue: #288ad6;
 $main-blue-40: rgba(25, 118, 210, 0.4);
+$main-blue-10: rgba(25, 118, 210, 0.1);
 
 $main-green: rgba(27, 194, 3, 0.96);
 $green-100: rgba(109, 170, 143, 0.96);
@@ -14,13 +15,14 @@ $green-100: rgba(109, 170, 143, 0.96);
 $red: #ea0505;
 
 :export {
-  $main-blue: $main-blue;
+  main-blue: $main-blue;
   gray-100: $gray-100;
   gray-100-10: $gray-100-10;
   gray-100-40: $gray-100-40;
   main-blue-40: $main-blue-40;
-  main-green:$main-green;
+  main-green: $main-green;
   green-100: $green-100;
   red: $red;
-  gray-main: $gray-main
+  gray-main: $gray-main;
+  main-blue-10: $main-blue-10
 }
