--- a/frontend/src/components/Auth/Auth.scss
+++ b/frontend/src/components/Auth/Auth.scss
@@ -1,5 +1,8 @@
 @import '../../shared/style';
 
+.close{
+  float: right;
+}
 .card {
   background: $gray-100-10;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
