--- a/frontend/src/components/Home/Home.module.scss
+++ b/frontend/src/components/Home/Home.module.scss
@@ -76,10 +76,13 @@ body {
         margin-top: 30px;
         font-size: 16px;
         color: #72a1d4;
-        text-decoration: underline;
+        cursor: pointer;
+        flex-wrap: nowrap;
+        align-content: center;
+        justify-content: flex-start;
+        width: min-content;
         display: flex;
         align-items: flex-end;
-        cursor: pointer;
 
         .workIcon {
           font-size: 16px;
