--- a/frontend/src/components/Case/Case.module.scss
+++ b/frontend/src/components/Case/Case.module.scss
@@ -53,6 +53,8 @@
       .buttonLink {
         margin-top: 20px;
         text-transform: none;
+        background: $main-blue;
+        width: 11rem;
       }
     }
   }
