--- a/frontend/src/components/Chat/Chat.module.scss
+++ b/frontend/src/components/Chat/Chat.module.scss
@@ -10,12 +10,12 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  border: 1px solid rgba(0, 0, 0, 0.12);
 
   .dialogs {
     position: relative;
     overflow-y: auto;
-    flex: 0 0 400px;
-    // background-color: $gray-100;
+    flex: 0 0 18%;
 
     .dialogsList {
       position: absolute;
@@ -23,28 +23,112 @@
       left: 0;
       right: 0;
       bottom: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    .emptyDialogs {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      text-align: center;
+      color: #626d7a;
     }
   }
 
   .messagesDialog {
-    // background-color: $gray-main;
-
     flex: 1 0 auto;
     display: flex;
     flex-direction: row;
 
     .messages {
-      flex: 0 0 600px;
+      flex: 0 0 45%;
+      position: relative;
+      overflow-y: auto;
+
+      .messagesList {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        .messageDateGroup {
+          position: sticky;
+          top: 4px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .messageDateGroupBlock {
+            background-color: white;
+            color: #626d7a;
+            font-size: 0.8rem;
+            padding: 6px 16px;
+            box-sizing: border-box;
+            border-radius: 16px;
+            box-shadow: 0px 0px 6px -2px rgba(34, 60, 80, 0.3) inset;
+          }
+        }
+
+        .message {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          padding: 0px 8px;
+          margin: 6px 0;
+          background-color: white;
+
+          .messageUser {
+            align-self: flex-end;
+          }
+
+          .messageBlock {
+            background-color: white;
+            font-size: 0.8rem;
+            box-sizing: border-box;
+            border-radius: 16px;
+            box-shadow: 0px 0px 3px 0px rgba(34, 60, 80, 0.3) inset;
+            max-width: 65%;
+            min-width: 30%;
+            padding: 8px 8px 8px 12px;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+
+            .messageText {
+              word-break: break-word;
+            }
+
+            .messageDate {
+              font-size: 0.7rem;
+              margin-left: auto;
+            }
+          }
+        }
+      }
+
+      .emptyMessages {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        right: 0;
+        text-align: center;
+        color: #626d7a;
+      }
+
+      .closeButton {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1;
+      }
     }
 
     .details {
       flex: 1 0 auto;
       background: aliceblue;
-
-      // width: 100%;
-      // margin: 0 40px;
-      // padding: 10px 0;
-      // min-height: 350px;
 
       .header {
         display: flex;
@@ -83,6 +167,14 @@
         margin-top: 20px;
         text-transform: none;
       }
+    }
+
+    .nonSelectedDialog {
+      flex: 1 0 auto;
+      text-align: center;
+      align-self: center;
+      color: #626d7a;
+      font-size: 1.3rem;
     }
   }
 }
