--- a/frontend/src/components/Chat/Chat.module.scss
+++ b/frontend/src/components/Chat/Chat.module.scss
@@ -11,7 +11,6 @@
   flex-direction: row;
   flex-grow: 1;
   border: 1px solid rgba(0, 0, 0, 0.12);
-  max-height: 700px;
 
   .dialogs {
     position: relative;
@@ -41,7 +40,6 @@
   .messagesDialog {
     flex: 1 0 auto;
     display: flex;
-    flex-direction: row;
 
     .messages {
       flex: 0 0 45%;
@@ -50,7 +48,7 @@
       flex-direction: column;
 
       .inputBlock {
-        margin-top: 4px;
+        margin: 4px 4px 2px 4px;
 
         form {
           display: flex;
@@ -58,64 +56,78 @@
         }
 
         .button {
-          margin: 0 1px;
+          margin: 1px 4px 1px 4px;
         }
       }
 
-      .messagesList {
-        overflow-y: auto;
+      .messageListBlock {
+        display: flex;
+        flex: 1 0 auto;
+        overflow-y: hidden;
+        position: relative;
+        flex-direction: column;
 
-        .messageDateGroup {
-          position: sticky;
-          top: 4px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          .messageDateGroupBlock {
-            background-color: white;
-            color: #626d7a;
-            font-size: 0.8rem;
-            padding: 6px 16px;
-            box-sizing: border-box;
-            border-radius: 16px;
-            box-shadow: 0px 0px 6px -2px rgba(34, 60, 80, 0.3) inset;
-          }
-        }
-
-        .message {
-          display: flex;
-          flex-direction: column;
-          align-items: flex-start;
-          padding: 0px 8px;
-          margin: 6px 0;
-          background-color: white;
-
-          .messageUser {
-            align-self: flex-end;
-          }
-
-          .messageBlock {
-            background-color: white;
-            font-size: 0.8rem;
-            box-sizing: border-box;
-            border-radius: 16px;
-            box-shadow: 0px 0px 3px 0px rgba(34, 60, 80, 0.3) inset;
-            max-width: 65%;
-            min-width: 30%;
-            padding: 8px 8px 8px 12px;
+        .messagesList {
+          flex: 1 0 auto;
+          overflow: auto;
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+  
+          .messageDateGroup {
+            position: sticky;
+            top: 4px;
             display: flex;
+            justify-content: center;
             align-items: center;
-            flex-direction: row;
-
-            .messageText {
-              word-break: break-word;
-            }
-
-            .messageDate {
-              font-size: 0.6rem;
-              margin-left: auto;
+  
+            .messageDateGroupBlock {
+              background-color: white;
               color: #626d7a;
+              font-size: 0.8rem;
+              padding: 6px 16px;
+              box-sizing: border-box;
+              border-radius: 16px;
+              box-shadow: 0px 0px 6px -2px rgba(34, 60, 80, 0.3) inset;
+            }
+          }
+  
+          .message {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 0px 8px;
+            margin: 6px 0;
+            background-color: white;
+  
+            .messageUser {
+              align-self: flex-end;
+            }
+  
+            .messageBlock {
+              background-color: white;
+              font-size: 0.8rem;
+              box-sizing: border-box;
+              border-radius: 16px;
+              box-shadow: 0px 0px 3px 0px rgba(34, 60, 80, 0.3) inset;
+              max-width: 65%;
+              min-width: 30%;
+              padding: 8px 8px 8px 12px;
+              display: flex;
+              align-items: center;
+              flex-direction: row;
+  
+              .messageText {
+                word-break: break-word;
+              }
+  
+              .messageDate {
+                font-size: 0.6rem;
+                margin-left: auto;
+                color: #626d7a;
+              }
             }
           }
         }
@@ -132,7 +144,8 @@
       .closeButton {
         position: absolute;
         top: 4px;
-        right: 8px;
+        left: 50%;
+        transform: translate(-50%, 0);
         z-index: 1;
       }
     }
