--- a/frontend/src/components/Chat/Chat.module.scss
+++ b/frontend/src/components/Chat/Chat.module.scss
@@ -41,6 +41,70 @@
     flex: 1 0 auto;
     display: flex;
 
+    .info {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      margin: 0 40px;
+      padding: 10px 0;
+      min-height: 350px;
+
+      .header {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+
+        .titleS {
+          display: block;
+          font-size: 18px;
+          font-weight: 600;
+          margin-bottom: 4px;
+        }
+
+        .descTitle {
+          display: block;
+          font-size: 14px;
+          font-weight: 400;
+          color: $gray-100;
+        }
+
+        .user {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          color: $gray-main;
+
+          &>* {
+            margin-left: 10px;
+          }
+        }
+      }
+
+      .servicesBlock {
+        flex: 1 0 auto;
+        display: flex;
+        flex-direction: column;
+
+        .titleBox {
+          margin-top: 10px;
+        }
+
+        .list {
+          flex: 1 0 auto;
+        }
+
+        .buttons {
+          margin-top: 8px;
+
+          .buttonLink {
+            text-transform: none;
+            //background: $main-blue;
+            width: 11rem;
+          }
+        }
+      }
+    }
+
     .messages {
       flex: 0 0 45%;
       position: relative;
@@ -75,14 +139,14 @@
           left: 0;
           right: 0;
           bottom: 0;
-  
+
           .messageDateGroup {
             position: sticky;
             top: 4px;
             display: flex;
             justify-content: center;
             align-items: center;
-  
+
             .messageDateGroupBlock {
               background-color: white;
               color: #626d7a;
@@ -93,7 +157,7 @@
               box-shadow: 0px 0px 6px -2px rgba(34, 60, 80, 0.3) inset;
             }
           }
-  
+
           .message {
             display: flex;
             flex-direction: column;
@@ -101,11 +165,11 @@
             padding: 0px 8px;
             margin: 6px 0;
             background-color: white;
-  
+
             .messageUser {
               align-self: flex-end;
             }
-  
+
             .messageBlock {
               background-color: white;
               font-size: 0.8rem;
@@ -118,11 +182,11 @@
               display: flex;
               align-items: center;
               flex-direction: row;
-  
+
               .messageText {
                 word-break: break-word;
               }
-  
+
               .messageDate {
                 font-size: 0.6rem;
                 margin-left: auto;
